<resources>
    <string name="app_name">Video Downloader</string>
    <!--Splash Screen Recourse -->
    <string name="year_name">Year 2022</string>

    <!-- Bottom nav mnu recourse-->
    <string name="content_description_pro">Progress</string>
    <string name="content_description_down">Downloads</string>
    <string name="home_description_more">Home</string>
    <!-- Tool bar Menu -->
    <string name="menu_btn">Tab menu</string>
    <string name="src_txt_btn">\t\tSearch or type URL</string>
    <string name="num_of_tab">%s</string>
    <!-- Dialog Box -->
    <string name="add_to_home_src">Add to homescreen</string>
    <string name="url_hint">URL</string>
    <string name="nme_hint">Name</string>
    <string name="ok_txt">Ok</string>
    <string name="cancel_txt">Cancel</string>
    <!-- Video Sample File -->
    <string name="sample_txt">Lorem ipsum dolor sit amet, consectetur ad</string>
    <string name="value_sample_txt">%s /%s </string>
    <string name="pause_txt">Pause</string>
    <string name="vid_file">Video File</string>
    <string name="close_file">Close</string>
    <string name="speed_txt">Speed</string>
    <!-- Download Fragments -->
    <string name="src_ic">Search Downloads</string>
    <string name="total_vid">%d videos</string>
    <string name="total_vid_view">%s</string>
    <string name="grid_download_info">%s\n\n%s\t%s</string>
    <string name="linear_download_info">%s\t%s</string>
    <string name="Untitled_folder_name">Untitled Folder</string>
    <string name="new_folder_name">New Folder</string>
    <string name="create_folder_name">Create</string>
    <string name="sorting_name">Sorting</string>
    <string-array name="sorting_item">
        <item>Sort by date</item>
        <item>Sort by size</item>
        <item>Sort by type</item>
        <item>Sort by name</item>
    </string-array>

    <string name="delete_video">Delete</string>
    <string name="move_video">Move To</string>
    <string name="set_pin_video">Set Pin</string>
    <string name="del_dialog_txt">Are you sure you want to delete this video.</string>
    <!--Download Lock Screen -->
    <string name="lock_src_title">Set a Lock Pin</string>
    <string name="lock_src_desc">For security ,set a PIN</string>
    <string name="lock_src_suggestion">PIN must be at least 6 digits long</string>
    <string name="nxt_btn">Next</string>
    <string name="clr_btn">Clear</string>
    <string name="with_pin_btn">With Pin</string>
    <string name="with_out_pin_btn">Without Pin</string>
    <!-- Mnu of Home Fragment -->
    <string name="new_tab_btn">Add a new Tab</string>
    <string name="close_tab_btn">Close tab</string>
    <string name="setting_btn">Setting</string>
    <string name="prv_inc_btn">Incognito Tab</string>
    <!-- Tab Layout  -->
    <string-array name="tab_item">
        <item>Files</item>
        <item>Folders</item>
        <item>Secure folder</item>
    </string-array>

    <!-- For Whatsapp Activity -->
    <string name="whatsapp_name">Whatsapp status</string>
    <string name="whatsapp_media_loc">/media/com.whatsapp/WhatsApp/Media/.Statuses/</string>
    <!-- /WhatsApp/Media/.Statuses/ -->
    <string-array name="whatsapp_tab_item">
        <item>Images</item>
        <item>Videos</item>
    </string-array>
    <!-- Dialog For Permission -->
    <string name="permission_title">Permission Needed!!</string>
    <string name="download_msg_desc">Play Video to get Download link</string>
    <string name="download_msg_title">Attention!!</string>
    <string name="permission_desc">Kindly Give us %s permission,otherwise application may not work Properly.</string>
    <string name="permission_btn">Ok got,it</string>
    <string name="file_path_2">/VideoDownload/User</string>
    <string name="file_path_1">/VideoDownload</string>
    <string name="m3u8_format">video/.m3u8</string>
    <string name="set_pin_txt">set_pin_for_folder_or_file</string>
    <string name="set_pin_cat">set_pin_category</string>
    <string name="set_pin_click">set_pin_isClick</string>

    <string name="folder_is_found">folder_in_db_is_found</string>
    <string name="folder_is_not_found">folder_is_not_found</string>

    <string name="file_is_found">file_in_db_is_found</string>
    <string name="file_is_not_found">file_is_not_found</string>
    <!-- Setting Item !-->

    <string-array name="setting_option">
        <item>Download Location</item>
        <item>Download with Wi-fi</item>
        <item>Save password</item>
        <item>Search engine option</item>
        <item>Clear cache</item>
        <item>Clear browsing history</item>
    </string-array>

    <string name="download_with_wi_fi">Download with Wi-fi</string>
    <string name="save_password">Save password</string>

    <string-array name="app_privacy">
        <item>Privacy policy</item>
        <item>Feedback</item>
        <item>Share App</item>
        <item>Rate App</item>
    </string-array>

</resources>